--- a/src/FruitSection/FruitSection.css
+++ b/src/FruitSection/FruitSection.css
@@ -34,9 +34,15 @@
     }
 }
 
-@media (min-width:1840px) {
+@media (min-width:1740px) {
     .FruitContainer{
         height: 80rem;
+    }
+    .FruitContainer p{
+        font-size: 2.4rem;
+    }
+    .FruitContainer h1{
+        font-size: 3.7rem;
     }
 }
 
