--- a/src/Opinion/Opinion.css
+++ b/src/Opinion/Opinion.css
@@ -47,3 +47,14 @@
         width: 33%;
     }
 }
+@media (min-width:1724px) {
+    .testimony .content{
+        font-size: 2.3rem;
+    }
+    .testimony h1{
+        font-size: 2.8rem;
+    }
+    .testimony .job{
+        font-size: 2.1rem;
+    }
+}
